MB-23500 Fix memory quota alignment in setup
Firefox issue: shifted a few things to improve layout.

Unrelated: I moved the setup gray bar and all modal dialogs up a few pixels to get back some vertical real estate.
Reviewed-on: http://review.couchbase.org/75699
Tested-by: Michael Wiederhold <mike@couchbase.com>

--- a/priv/public/ui/app/css/cbui-components.css
+++ b/priv/public/ui/app/css/cbui-components.css
@@ -858,11 +858,11 @@ section.error {
 /* Sign In page details ------------ */
 .sign-in-background {
   background: #eceff2;
-  height: 4.5rem;
-  width:100%;
-  position:absolute;
-  top: 24px;
-  z-index:1;
+  height: 4rem;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 1;
 }
 
 /* Small Dialog (uses Panel) -------- */
@@ -1546,7 +1546,7 @@ input[type="checkbox"] + label {
   font-weight: normal;
   cursor: pointer;
   font-size: .875rem;
-  padding-left: .5rem;
+  padding-left: .25rem;
   margin-right: .75rem;
 }
 input[type="radio"] + label:last-child,
