--- a/priv/public/ui/app/css/modal.css
+++ b/priv/public/ui/app/css/modal.css
@@ -24,7 +24,7 @@
 .dialog {
     position: relative;
     z-index: 101;
-    top: 60px;
+    top: 2.5rem;
 }
 
 
